.jsp debug + controller editted

--- a/Zadatak/.settings/org.eclipse.wst.common.component
+++ b/Zadatak/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent/WEB-INF/views"/>
         <wb-resource deploy-path="/" source-path="/WebContent/WEB-INF/views/info"/>
+        <wb-resource deploy-path="/" source-path="/WebContent/WEB-INF/views/manipulation"/>
         <property name="java-output-path" value="/spring-mvc-java-config/build/classes"/>
         <property name="context-root" value="zadatak"/>
     </wb-module>
